--- a/pom.xml
+++ b/pom.xml
@@ -124,6 +124,7 @@
 						<dependency>
 							<groupId>com.puppycrawl.tools</groupId>
 							<artifactId>checkstyle</artifactId>
+							<version>10.21.4</version>
 						</dependency>
 					</dependencies>
 				</plugin>
