Commit #1 Исправлены чекстайл-ошибки

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,6 +6,8 @@ jdbc.password=12345
 hibernate.show_sql=true
 hibernate.jdbc.time_zone=UTC
 
+server.port=8085
+
 logging.level.org.springframework.orm.jpa=INFO
 logging.level.org.springframework.transaction=INFO
 logging.level.org.springframework.transaction.interceptor=TRACE
