--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,20 +1,16 @@
-jdbc.driverClassName=org.postgresql.Driver
-jdbc.url=jdbc:postgresql://localhost:5432/late
-jdbc.username=dbuser
-jdbc.password=12345
+spring.datasource.url=jdbc:postgresql://localhost:5432/shareit
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.username=progingir
+spring.datasource.password=12345
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
 
-hibernate.show_sql=true
-hibernate.jdbc.time_zone=UTC
-
+spring.jpa.hibernate.jdbc.time_zone=UTC
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 server.port=8080
+
 
 logging.level.org.springframework.orm.jpa=INFO
 logging.level.org.springframework.transaction=INFO
 logging.level.org.springframework.transaction.interceptor=TRACE
 logging.level.org.springframework.orm.jpa.JpaTransactionManager=DEBUG
-
-# TODO Append connection to DB
-#spring.datasource.driverClassName
-#spring.datasource.url
-#spring.datasource.username
-#spring.datasource.password
