--- a/compose.yaml
+++ b/compose.yaml
@@ -1,16 +1,39 @@
 services:
-  shareit-server:
-    build:
-      context: .
-      dockerfile: Dockerfile
-    container_name: shareit-server
+  gateway:
+    build: gateway
+    image: shareit-gateway
+    container_name: shareit-gateway
     ports:
       - "8080:8080"
-    volumes:
-      - ./data:/data
+    depends_on:
+      - server
     environment:
-      - SPRING_DATASOURCE_URL=jdbc:h2:file:/data/shareit
-      - SPRING_DATASOURCE_DRIVER_CLASS_NAME=org.h2.Driver
+      - SHAREIT_SERVER_URL=http://server:9090
+
+  server:
+    build: server
+    image: shareit-server
+    container_name: shareit-server
+    ports:
+      - "9090:9090"
+    depends_on:
+      - db
+    environment:
+      - SPRING_DATASOURCE_URL=jdbc:postgresql://db:5432/shareit
       - SPRING_DATASOURCE_USERNAME=bot68dt
       - SPRING_DATASOURCE_PASSWORD=12345
-      - SPRING_JPA_HIBERNATE_DDL_AUTO=update
+
+  db:
+    image: postgres:16.1
+    container_name: postgres
+    ports:
+      - "6541:5432"
+    environment:
+      - POSTGRES_PASSWORD=bot68dt
+      - POSTGRES_USER=12345
+      - POSTGRES_DB=shareit
+    healthcheck:
+      test: pg_isready -q -d $$POSTGRES_DB -U $$POSTGRES_USER
+      timeout: 5s
+      interval: 5s
+      retries: 10
